[VAS-1105] feat: Update accept offer API (#114)
* [VAS-1105] updated accept private bundle offer api with request body

* [VAS-1105] updated unit tests

* [VAS-1105] fix

* [VAS-1105] updated openapi

* [VAS-1105] added javadoc

* [VAS-1105] fix logic to avoid offer delete before all condition are evaluated and updated unit tests
